fixed calculator not accepting commas and not showing invalid inputs, added redText for errors

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -176,3 +176,6 @@ Button:pressed {
 	-fx-background-color: lightgray;
 }
 
+.redText {
+	-fx-text-text-color: red;
+}
